Fixed game and menu overlaping issue

--- a/style.css
+++ b/style.css
@@ -26,9 +26,7 @@ canvas {
 .newGame,
 .instructionsBtn,
 .backBtn,
-.settingsBtn,
-.restartBtn,
-.soundBtn {
+.settingsBtn{
   text-align: center;
   vertical-align: middle;
   border: 2px solid #39483c;
@@ -52,9 +50,6 @@ canvas {
 .backBtn:hover {
   background-color: #9cc1bb;
 }
-.soundBtn:active {
-  background: pink;
-}
 .instructions {
   margin: auto;
   color: #39483c;
@@ -62,24 +57,15 @@ canvas {
   font-family: "Amatic SC", sans-serif;
   background-color: inherit;
 }
-.gameOverMenu{
-  color: white;
-  font-size: 2rem;
-  font-family: "Amatic SC", sans-serif;
-  display: none;
-}
-.startMenu {
+.flex-container{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 100%;
   max-height: 100%;
-  color: white;
-  font-size: 2rem;
-  font-family: "Amatic SC", sans-serif;
-  display: none;
 }
+
 .flex-container4 {
   display: flex;
   flex-direction: row;
